Add text, selection binding to FlairText

--- a/Sources/Flair/Resources/Localizable.xcstrings
+++ b/Sources/Flair/Resources/Localizable.xcstrings
@@ -145,10 +145,16 @@
         }
       }
     },
+    "Selection = %@" : {
+
+    },
     "Size" : {
 
     },
     "Text" : {
+
+    },
+    "Text = %@" : {
 
     },
     "Weight" : {
